--- a/SQLSelectLab.ipynb
+++ b/SQLSelectLab.ipynb
@@ -761,19 +761,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[16], line 15\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# CodeGrade step5\u001b[39;00m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m# Replace None with your code\u001b[39;00m\n\u001b[0;32m      3\u001b[0m df_executive \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_sql(\u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;124mSELECT firstName, lastName, jobTitle,\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;124m    CASE\u001b[39m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;124mFROM employees\u001b[39m\n\u001b[0;32m     13\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m, conn)\n\u001b[1;32m---> 15\u001b[0m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mexecuative\u001b[38;5;241m.\u001b[39mhead()\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>firstName</th>\n",
+       "      <th>lastName</th>\n",
+       "      <th>jobTitle</th>\n",
+       "      <th>role</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Diane</td>\n",
+       "      <td>Murphy</td>\n",
+       "      <td>President</td>\n",
+       "      <td>Executive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Mary</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>VP Sales</td>\n",
+       "      <td>Executive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jeff</td>\n",
+       "      <td>Firrelli</td>\n",
+       "      <td>VP Marketing</td>\n",
+       "      <td>Executive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>William</td>\n",
+       "      <td>Patterson</td>\n",
+       "      <td>Sales Manager (APAC)</td>\n",
+       "      <td>Not Execuative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gerard</td>\n",
+       "      <td>Bondur</td>\n",
+       "      <td>Sale Manager (EMEA)</td>\n",
+       "      <td>Not Execuative</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  firstName   lastName              jobTitle            role\n",
+       "0     Diane     Murphy             President       Executive\n",
+       "1      Mary  Patterson              VP Sales       Executive\n",
+       "2      Jeff   Firrelli          VP Marketing       Executive\n",
+       "3   William  Patterson  Sales Manager (APAC)  Not Execuative\n",
+       "4    Gerard     Bondur   Sale Manager (EMEA)  Not Execuative"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -791,7 +860,7 @@
     "FROM employees\n",
     "\"\"\", conn)\n",
     "\n",
-    "df.execuative.head()"
+    "df_executive.head()"
    ]
   },
   {
@@ -814,13 +883,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name_length</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   name_length\n",
+       "0            6\n",
+       "1            9\n",
+       "2            8\n",
+       "3            9\n",
+       "4            6"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# CodeGrade step6\n",
     "# Replace None with your code\n",
-    "df_name_length = None"
+    "df_name_length = pd.read_sql(\"\"\"\n",
+    "SELECT LENGTH(lastName) as name_length\n",
+    "FROM employees\n",
+    "\"\"\", conn)\n",
+    "\n",
+    "df_name_length.head()"
    ]
   },
   {
@@ -835,13 +972,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>short_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Pr</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>VP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>VP</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Sa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Sa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  short_title\n",
+       "0          Pr\n",
+       "1          VP\n",
+       "2          VP\n",
+       "3          Sa\n",
+       "4          Sa"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# CodeGrade step7\n",
     "# Replace None with your code\n",
-    "df_short_title = None"
+    "df_short_title = pd.read_sql(\"\"\"\n",
+    "SELECT substr(jobTitle, 1, 2) as short_title\n",
+    "FROM employees\n",
+    "\"\"\", conn)\n",
+    "\n",
+    "df_short_title.head()"
    ]
   },
   {
@@ -864,9 +1069,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>orderNumber</th>\n",
+       "      <th>productCode</th>\n",
+       "      <th>quantityOrdered</th>\n",
+       "      <th>priceEach</th>\n",
+       "      <th>orderLineNumber</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10100</td>\n",
+       "      <td>S18_1749</td>\n",
+       "      <td>30</td>\n",
+       "      <td>136.00</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10100</td>\n",
+       "      <td>S18_2248</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55.09</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10100</td>\n",
+       "      <td>S18_4409</td>\n",
+       "      <td>22</td>\n",
+       "      <td>75.46</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10100</td>\n",
+       "      <td>S24_3969</td>\n",
+       "      <td>49</td>\n",
+       "      <td>35.29</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10101</td>\n",
+       "      <td>S18_2325</td>\n",
+       "      <td>25</td>\n",
+       "      <td>108.06</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2991</th>\n",
+       "      <td>10425</td>\n",
+       "      <td>S24_2300</td>\n",
+       "      <td>49</td>\n",
+       "      <td>127.79</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2992</th>\n",
+       "      <td>10425</td>\n",
+       "      <td>S24_2840</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31.82</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2993</th>\n",
+       "      <td>10425</td>\n",
+       "      <td>S32_1268</td>\n",
+       "      <td>41</td>\n",
+       "      <td>83.79</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2994</th>\n",
+       "      <td>10425</td>\n",
+       "      <td>S32_2509</td>\n",
+       "      <td>11</td>\n",
+       "      <td>50.32</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2995</th>\n",
+       "      <td>10425</td>\n",
+       "      <td>S50_1392</td>\n",
+       "      <td>18</td>\n",
+       "      <td>94.92</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2996 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     orderNumber productCode quantityOrdered priceEach orderLineNumber\n",
+       "0          10100    S18_1749              30    136.00               3\n",
+       "1          10100    S18_2248              50     55.09               2\n",
+       "2          10100    S18_4409              22     75.46               4\n",
+       "3          10100    S24_3969              49     35.29               1\n",
+       "4          10101    S18_2325              25    108.06               4\n",
+       "...          ...         ...             ...       ...             ...\n",
+       "2991       10425    S24_2300              49    127.79               9\n",
+       "2992       10425    S24_2840              31     31.82               5\n",
+       "2993       10425    S32_1268              41     83.79              11\n",
+       "2994       10425    S32_2509              11     50.32               6\n",
+       "2995       10425    S50_1392              18     94.92               2\n",
+       "\n",
+       "[2996 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Run this cell without changes\n",
     "\n",
